clusters/lab.k8s.callahan.house/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
